--- a/app/index.html
+++ b/app/index.html
@@ -17,16 +17,22 @@
     <script src="components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
   </head>
-    <body>
-      <!--[if lt IE 10]>
-          <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+  <body>
+    <!--[if lt IE 10]>
+        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-      <div class="container">
-        here!!
-      </div>
+    <div class="container">
+      Welcome
+    </div>
 
-      <!-- build:js({.tmp,app}) scripts/main.js -->
-      <script src="scripts/main.js"></script>
-      <!-- endbuild -->
-</body>
+    <!-- build:js scripts/vendor/vendor.js -->
+    <script src="components/lodash/dist/lodash.underscore.js"></script>
+    <script src="components/jquery/jquery.js"></script>
+    <script src="components/backbone/backbone.js"></script>
+    <!-- endbuild -->
+
+    <!-- build:js({.tmp,app}) scripts/main.js -->
+    <script src="scripts/main.js"></script>
+    <!-- endbuild -->
+  </body>
 </html>
