Add less and bootstrap
Add assemble less to the grunt build process.
Import twitter bootstrap 3 into css.

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,12 @@
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
     <div class="container">
-      Welcome
+      <h4>
+        Welcome
+      </h4>
+      <section class="top-section">
+        This should be towards the middle on desktop!
+      </section>
     </div>
 
     <!-- build:js scripts/vendor/vendor.js -->
